Fix spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,20 +18,14 @@ body {
   	background-position: center 40px;
 }
 header {
-	position: absolute;
-	border: 0px dashed white;
 	margin: 0px;
 	padding: 0px;
-	top: 90px;
 	width: 400px;
 	height: 460px;
 	}
 section {
-	position: relative;
-	border: 0px dashed white;
 	margin: 0px;
   	padding: 0px;
- 	top: 90px;
 	width: 400px;
 	height: 460px;
 	}
